tests/invalid/.cvsignore
*.c
*.c_date
*.d
*.date
*.date0
*.date3
*.dep
*.err
*.err_res
*.int
*.int0
*.int2
*.int3
*.log
*.mh
*.mih
*.dv
.allres
*.err_res1
runtests.errs
CLEAN
FAILED_TESTS
Mercury
.mgnuc_copts
.mgnuc_opts
